syntax = "proto3";

package profile;

// Service definition for Profile
service ProfileService {
  rpc CreateUserProfile (CreateUserProfileRequest) returns (CreateUserProfileResponse);
  rpc UpdateUserProfile (updateProfileRequest) returns (updateUserProfileResponse);
}

// Request and response messages for ProfileService
message CreateUserProfileRequest {
  string userId = 1;
  string username = 2;
  string email = 3;
  string password = 4;
  string mobile = 5;
}

message CreateUserProfileResponse {
  bool success = 1;
}

message updateProfileRequest {
  string userId = 1;
  string username = 2;
  string password = 3;
  string mobile = 4;
}


message updateUserProfileResponse {
  bool success = 1;
}